<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMurkyWater"
    android:weightSum="100"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="65">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_with_background" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="35"
        android:gravity="center">

        <Button
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/play_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/play_string"
            android:onClick="goToDifficultyScreen"
            android:background="@drawable/button"/>
        <Button
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/help_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/help_string"
            android:onClick="goToHowToPlayScreen"
            android:background="@drawable/button"/>

    </LinearLayout>

</LinearLayout>