<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPeriwinkle"
    android:weightSum="100">

    <RelativeLayout
        android:id="@+id/game_play_header_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_weight="8">

        <ImageView
            android:contentDescription="Options"
            android:id="@+id/game_options_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:id="@+id/score_counter_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/score_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_title_string"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/score_counter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/high_score_counter_linear_layout"
            android:layout_below="@id/score_counter_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score_label_string"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/high_score_counter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:text="0" />
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="72">
        <GridLayout
            android:id="@+id/memory_block_grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        </GridLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">
        <Button
            android:id="@+id/show_pattern_button"
            android:fontFamily="@font/montserrat_regular"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/show_pattern_string"
            android:onClick="showPatternClicked"
            android:background="@drawable/rounder_buttons" />
    </FrameLayout>
</LinearLayout>